deploy: 27b51f6d78d99031ac8b235e4ddb3146914f9431

--- a/symptoms-and-risks/index.html
+++ b/symptoms-and-risks/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Symptoms and risks</h1>
           
-            <p class="small-text">Last updated&nbsp;December 2, 2020 at 5:31 PM</p>
+            <p class="small-text">Last updated&nbsp;December 10, 2020 at 5:10 PM</p>
           
         </div>
       </div>
@@ -247,7 +247,7 @@
 
 
 
-<ul class="js-qa js-qa-answer"><li>Seniors over 65</li><li>People with certain medical conditions:<ul><li>Cancer</li><li>Chronic kidney disease</li><li>COPD </li><li>Weakened immune system from organ transplant</li><li>Obesity </li><li>Serious heart conditions</li><li>Pregnancy</li><li>Sickle cell disease</li><li>Smoking</li><li>Type 2 diabetes</li></ul></li></ul>
+<ul class="js-qa js-qa-answer"><li>Seniors over 65</li><li>People with certain medical conditions:<ul><li>Cancer</li><li>Chronic kidney disease</li><li>COPD&nbsp;</li><li>Weakened immune system from organ transplant</li><li>Obesity&nbsp;</li><li>Serious heart conditions</li><li>Pregnancy</li><li>Sickle cell disease</li><li>Smoking</li><li>Type 2 diabetes</li></ul></li></ul>
 
 
 
@@ -468,17 +468,37 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>The disease has not existed long enough for us to really know. But there is reason to suspect that many organs besides the lungs are affected, and some effects may persist after recovery.</p>
-<p>Some mild COVID-19 cases who were not admitted to a hospital have reported symptoms lasting more than 4 weeks. A number of hospitalized cases have had continuing symptoms for 8 or more weeks following discharge.</p>
-<p>Persistent health problems after severe COVID-19 disease can include:</p>
-<ul><li>Breathing problems such as chronic cough, shortness of breath, lung inflammation and scarring, and poor blood flow between the heart and lungs</li><li>Heart problems such as chest tightness, damage to the heart muscle, and heart failure</li><li>Lasting loss or change of smell and taste</li><li>Mental health issues including depression, anxiety, and problems with memory, language, thinking, or judgement</li><li>Inflammatory problems such as muscle aches, multisystem inflammatory syndrome, Guillain-Barre syndrome, or neuralgic amyotrophy</li><li>Stomach and bowel problems with diarrhea</li><li>Continuing headaches</li><li>Fatigue, weakness, and sleeplessness</li><li>Liver and kidney dysfunction</li><li>Blood clots</li><li>Swollen lymph nodes</li><li>Skin rashes</li></ul>
-<p>If you are recovering from COVID-19, you should speak with your doctor for assessment of any long-term symptoms or health problems.</p>
-<p>See the CDC’s <a href="https://www.cdc.gov/coronavirus/2019-ncov/long-term-effects.html">Long-Term Effects of COVID-19</a> and NIH’s <a href="https://www.covid19treatmentguidelines.nih.gov/overview/clinical-presentation/">Clinical Presentation of People with SARS-CoV-2 Infection</a> pages for more details.</p>
+<p>The disease has not existed long enough for us to really know. But as the pandemic unfolds, we are learning that many organs besides the lungs are affected by COVID-19, and there are many ways it can affect someone’s health.</p>
+<p>While most people with COVID-19 recover and return to normal health, some patients can have symptoms that can last for weeks or even months after recovery from acute illness. Even people who are not hospitalized and who have mild illness can experience persistent or late symptoms.&nbsp;</p>
+<p>The most commonly reported long-term symptoms include:</p>
+<ul><li>Fatigue</li><li>Shortness of breath</li><li>Cough</li><li>Joint pain</li><li>Chest pain</li></ul>
+<p>Other reported long-term symptoms include:</p>
+<ul><li>Difficulty with thinking and concentration (sometimes referred to as “brain fog”)</li><li>Depression</li><li>Muscle pain</li><li>Headache</li><li>Intermittent fever</li><li>Fast-beating or pounding heart (also known as heart palpitations)</li></ul>
+<p>More serious long-term complications appear to be less common but have been reported. These have been noted to affect different organ systems in the body. These include:</p>
+<ul><li>Cardiovascular: inflammation of the heart muscle</li><li>Respiratory: lung function abnormalities</li><li>Renal: acute kidney injury</li><li>Dermatologic: rash, hair loss</li><li>Neurological: smell and taste problems, sleep issues, difficulty with concentration, memory problems</li><li>Psychiatric: depression, anxiety, changes in mood</li></ul>
+<p>The long-term significance of these effects is not yet known.</p>
+<p>See the CDC’s <a href="https://www.cdc.gov/coronavirus/2019-ncov/long-term-effects.html">Long-Term Effects of COVID-19 </a>for more details.</p>
 
       </div>
     </div>
   </div>
 </cwds-accordion>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
