--- a/es/data-and-tools/index.html
+++ b/es/data-and-tools/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Datos y herramientas</h1>
           
-            <p class="small-text">Última actualización&nbsp;10 de diciembre de 2020 a las 5:13 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;11 de diciembre de 2020 a las 7:48 a. m.</p>
           
         </div>
       </div>
