--- a/stay-home-except-for-essential-needs/index.html
+++ b/stay-home-except-for-essential-needs/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>About COVID-19 restrictions</h1>
           
-            <p class="small-text">Last updated&nbsp;December 9, 2020 at 5:07 PM</p>
+            <p class="small-text">Last updated&nbsp;December 11, 2020 at 11:01 AM</p>
           
         </div>
       </div>
