deploy: 72f79f4664d316a0c79ee21cbca6fc7f73975503

--- a/es/latest-news/index.html
+++ b/es/latest-news/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Últimas noticias sobre COVID-19</h1>
           
-            <p class="small-text">Última actualización&nbsp;11 de diciembre de 2020 a las 1:11 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;11 de diciembre de 2020 a las 1:46 p. m.</p>
           
         </div>
       </div>
@@ -177,6 +177,14 @@
           </h2>
           <p class="card-text" lang="en-US"><small class="text-muted"><!--44481 -->December 11, 2020</small></p>
           <div class="card-text" lang="en-US">SACRAMENTO –Governor Gavin Newsom today announced the appointment of Dee Dee Myers to serve as Senior Advisor to the Governor and Director of the Governor’s Office of Business and Economic Development (GO-Biz), a cabinet...</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR20-331.aspx" lang="en-US" hreflang="en-US">State Officials Announce Latest COVID-19 Facts</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--700e5143ec20c72625a3b628397cc93d -->December 10, 2020</small></p>
+          <div class="card-text" lang="en-US">The California Department of Public Health (CDPH) today  announced the most recent statistics on COVID-19, including data on intensive care unit (ICU) capacity across the state.</div>
         </div>
       </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
@@ -725,18 +733,18 @@
       </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
           <h2 class="card-title lead" lang="en-US">
-            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR20-280.aspx" lang="en-US" hreflang="en-US">State Officials Announce Latest COVID-19 Facts</a>
-          </h2>
-          <p class="card-text" lang="en-US"><small class="text-muted"><!--9c73677d7e78b597ec8acec23cb72c26 -->October 26, 2020</small></p>
-          <div class="card-text" lang="en-US">The California Department of Public Health (CDPH) today announced the most recent statistics on COVID-19.</div>
-        </div>
-      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
-        <div class="card-body pl-0" lang="en-US">
-          <h2 class="card-title lead" lang="en-US">
             <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR20-281.aspx" lang="en-US" hreflang="en-US">California Department of Public Health Names Drafting Guidelines Workgroup to Advise State on COVID-19 Vaccines</a>
           </h2>
           <p class="card-text" lang="en-US"><small class="text-muted"><!--cdcb692133d749239cf7f894f427b815 -->October 26, 2020</small></p>
           <div class="card-text" lang="en-US">Building on Governor Gavin Newsom’s announcement last week establishing a Scientific Safety Review Workgroup to advise the state on COVID-19 vaccines, today Dr. Erica Pan, Acting State Public Health Officer, named a grou...</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR20-280.aspx" lang="en-US" hreflang="en-US">State Officials Announce Latest COVID-19 Facts</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--9c73677d7e78b597ec8acec23cb72c26 -->October 26, 2020</small></p>
+          <div class="card-text" lang="en-US">The California Department of Public Health (CDPH) today announced the most recent statistics on COVID-19.</div>
         </div>
       </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
