deploy: 3993ea8be064298637dca8709dadba2cdace9078

--- a/equity/index.html
+++ b/equity/index.html
@@ -163,7 +163,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>California’s commitment to health equity</h1>
           
-            <p class="small-text">Last updated&nbsp;December 10, 2020 at 2:24 PM</p>
+            <p class="small-text">Last updated&nbsp;December 11, 2020 at 3:07 PM</p>
           
         </div>
       </div>
@@ -475,7 +475,7 @@
 
 
 
-<p>We know a lot about the impact of COVID-19 on certain communities, but we can better invest our resources by increasing the collection of race, ethnicity, and sexual orientation and gender identity data. This data collection requires close cooperation with private sector partners, laboratories, and state and county officials.</p>
+<p>We know a lot about the impact of COVID-19 on certain communities, but we can better invest our resources by increasing the collection of race, ethnicity, and sexual orientation and gender identity data. This data collection requires close cooperation with private sector partners, laboratories, and state and county officials. <a href="#learn-more">View resources on how to improve reporting</a>.</p>
 
 
 
@@ -591,6 +591,13 @@
                 </a>
             </li>
             <li>
+                <a class="link-arrow-blue" data-kind="external" href="https://www.ahrq.gov/evidencenow/tools/reduce-disparities.html">
+                    <div class="link-arrow-label">
+                        Improve completeness of data on race and ethnicity</div>
+                    <cagov-arrow></cagov-arrow>
+                </a>
+            </li>
+            <li>
                 <a class="link-arrow-blue" data-kind="internal" href="https://covid19.ca.gov/discrimination/">
                     <div class="link-arrow-label">
                         Fight discrimination and stigma
@@ -618,6 +625,13 @@
                 </a>
             </li>
             <li>
+                <a class="link-arrow-blue" data-kind="external" href="https://www.lgbtqiahealtheducation.org/resources/in/collecting-sexual-orientation-and-gender-identity-data/">
+                    <div class="link-arrow-label">
+                        Improve completeness of data on sexual orientation and gender identity</div>
+                    <cagov-arrow></cagov-arrow>
+                </a>
+            </li>
+            <li>
                 <a class="link-arrow-blue" data-kind="external" href="https://map.healthyplacesindex.org/">
                     <div class="link-arrow-label">
                         Healthy Places Index census tract map
@@ -628,7 +642,7 @@
             <li>
                 <a class="link-arrow-blue" data-kind="external" href="https://www.cdc.gov/coronavirus/2019-ncov/need-extra-precautions/people-with-medical-conditions.html">
                     <div class="link-arrow-label">
-                        Underlying conditions’ link to COVID-19’s severity
+                        Learn about links between underlying conditions and COVID-19
                     </div>
                     <cagov-arrow></cagov-arrow>
                 </a>
