deploy: 0fc79f03e75b37293e70a52dbd153553579e741a

--- a/restaurants-deliver-home-meals-for-seniors/index.html
+++ b/restaurants-deliver-home-meals-for-seniors/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Great Plates: Free meals delivered to seniors</h1>
           
-            <p class="small-text">Last updated&nbsp;December 11, 2020 at 4:05 PM</p>
+            <p class="small-text">Last updated&nbsp;December 11, 2020 at 4:20 PM</p>
           
         </div>
       </div>
@@ -231,7 +231,7 @@
 
 
 
-<h2>About this program</h2>
+<h2 id="about">About this program</h2>
 
 
 
@@ -251,7 +251,7 @@
 
 
 
-<h2>Additional resources</h2>
+<h2 id="additional-resources">Additional resources</h2>
 
 
 
