--- a/tl/data-and-tools/index.html
+++ b/tl/data-and-tools/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Mga datos at tool</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Disyembre 11, 2020 sa 5:58 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Disyembre 12, 2020 sa 1:00 AM</p>
           
         </div>
       </div>
