--- a/zh-hant/data-and-tools/index.html
+++ b/zh-hant/data-and-tools/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>數據和工具</h1>
           
-            <p class="small-text">最近更新&nbsp;2020年12月11日, 下午5:58</p>
+            <p class="small-text">最近更新&nbsp;2020年12月12日, 上午1:00</p>
           
         </div>
       </div>
