--- a/ar/equity/index.html
+++ b/ar/equity/index.html
@@ -163,7 +163,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>التزام ولاية كاليفورنيا بالعدالة الصحية.</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;2:53 م الساعة 3 ديسمبر 2020</p>
+            <p class="small-text">آخر التحديثات&nbsp;12:34 م الساعة 11 ديسمبر 2020</p>
           
         </div>
       </div>
@@ -3915,7 +3915,7 @@ class CAGOVChartD3Lines extends window.HTMLElement {
         return i * 20 - 10;
       })
       .attr("text-anchor", "start")
-      .attr("alignment-baseline", "hanging");
+      .attr("dominant-baseline", "hanging");
   }
 
   rewriteLegend(svg, legendLabels) {
@@ -4738,7 +4738,7 @@ function writeLegend(svg, legendLabels, width, legendPositions) {
     .attr('x', 50)
     .attr('y', legendPositions.y)
     .attr('text-anchor', 'start')
-    .attr('alignment-baseline', 'hanging');
+    .attr('dominant-baseline', 'hanging');
 }
 
 function writeBars(component, svg, data, x, y, width, tooltip) {
