--- a/es/equity/index.html
+++ b/es/equity/index.html
@@ -163,7 +163,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Compromiso de California con la equidad en la salud</h1>
           
-            <p class="small-text">Última actualización&nbsp;3 de diciembre de 2020 a las 2:53 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;11 de diciembre de 2020 a las 12:34 p. m.</p>
           
         </div>
       </div>
@@ -3915,7 +3915,7 @@ class CAGOVChartD3Lines extends window.HTMLElement {
         return i * 20 - 10;
       })
       .attr("text-anchor", "start")
-      .attr("alignment-baseline", "hanging");
+      .attr("dominant-baseline", "hanging");
   }
 
   rewriteLegend(svg, legendLabels) {
@@ -4738,7 +4738,7 @@ function writeLegend(svg, legendLabels, width, legendPositions) {
     .attr('x', 50)
     .attr('y', legendPositions.y)
     .attr('text-anchor', 'start')
-    .attr('alignment-baseline', 'hanging');
+    .attr('dominant-baseline', 'hanging');
 }
 
 function writeBars(component, svg, data, x, y, width, tooltip) {
