--- a/ko/equity/index.html
+++ b/ko/equity/index.html
@@ -163,7 +163,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>건강 형평성에 대한 캘리포니아의 의지</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2020년 12월 3일 오후 2:53</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2020년 12월 11일 오후 12:34</p>
           
         </div>
       </div>
@@ -3915,7 +3915,7 @@ class CAGOVChartD3Lines extends window.HTMLElement {
         return i * 20 - 10;
       })
       .attr("text-anchor", "start")
-      .attr("alignment-baseline", "hanging");
+      .attr("dominant-baseline", "hanging");
   }
 
   rewriteLegend(svg, legendLabels) {
@@ -4738,7 +4738,7 @@ function writeLegend(svg, legendLabels, width, legendPositions) {
     .attr('x', 50)
     .attr('y', legendPositions.y)
     .attr('text-anchor', 'start')
-    .attr('alignment-baseline', 'hanging');
+    .attr('dominant-baseline', 'hanging');
 }
 
 function writeBars(component, svg, data, x, y, width, tooltip) {
