--- a/vi/equity/index.html
+++ b/vi/equity/index.html
@@ -165,7 +165,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Cam kết đảm bảo sự công bằng sức khỏe của California</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;3 tháng 12, 2020 lúc 14:53</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;11 tháng 12, 2020 lúc 24:34</p>
           
         </div>
       </div>
@@ -3917,7 +3917,7 @@ class CAGOVChartD3Lines extends window.HTMLElement {
         return i * 20 - 10;
       })
       .attr("text-anchor", "start")
-      .attr("alignment-baseline", "hanging");
+      .attr("dominant-baseline", "hanging");
   }
 
   rewriteLegend(svg, legendLabels) {
@@ -4740,7 +4740,7 @@ function writeLegend(svg, legendLabels, width, legendPositions) {
     .attr('x', 50)
     .attr('y', legendPositions.y)
     .attr('text-anchor', 'start')
-    .attr('alignment-baseline', 'hanging');
+    .attr('dominant-baseline', 'hanging');
 }
 
 function writeBars(component, svg, data, x, y, width, tooltip) {
