--- a/zh-hans/equity/index.html
+++ b/zh-hans/equity/index.html
@@ -163,7 +163,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>加州致力于实现健康公平</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2020年12月3日, 下午2:53</p>
+            <p class="small-text">最后更新时间&nbsp;2020年12月11日, 下午12:34</p>
           
         </div>
       </div>
@@ -3913,7 +3913,7 @@ class CAGOVChartD3Lines extends window.HTMLElement {
         return i * 20 - 10;
       })
       .attr("text-anchor", "start")
-      .attr("alignment-baseline", "hanging");
+      .attr("dominant-baseline", "hanging");
   }
 
   rewriteLegend(svg, legendLabels) {
@@ -4736,7 +4736,7 @@ function writeLegend(svg, legendLabels, width, legendPositions) {
     .attr('x', 50)
     .attr('y', legendPositions.y)
     .attr('text-anchor', 'start')
-    .attr('alignment-baseline', 'hanging');
+    .attr('dominant-baseline', 'hanging');
 }
 
 function writeBars(component, svg, data, x, y, width, tooltip) {
