--- a/vi/latest-news/index.html
+++ b/vi/latest-news/index.html
@@ -164,7 +164,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Tin tức mới nhất về COVID-19</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;12 tháng 12, 2020 lúc 24:34</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;12 tháng 12, 2020 lúc 13:55</p>
           
         </div>
       </div>
@@ -179,6 +179,14 @@
           </h2>
           <p class="card-text" lang="en-US"><small class="text-muted"><!--44596 -->December 11, 2020</small></p>
           <div class="card-text" lang="en-US">SACRAMENTO – Governor Gavin Newsom issued the following statement after the U.S. Food and Drug Administration granted an Emergency Use Authorization for the Pfizer COVID-19 vaccine this evening: “As California faces redu...</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR20-333.aspx" lang="en-US" hreflang="en-US">​State Officials Announce Latest COVID-19 Facts</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--31b36c5057eb4dde040166fe0afa9ef3 -->December 11, 2020</small></p>
+          <div class="card-text" lang="en-US">The California Department of Public Health (CDPH) today  announced the most recent statistics on COVID-19, including data on intensive care unit (ICU) capacity across the state.</div>
         </div>
       </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
