--- a/equity/index.html
+++ b/equity/index.html
@@ -163,7 +163,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>California’s commitment to health equity</h1>
           
-            <p class="small-text">Last updated&nbsp;December 11, 2020 at 1:55 PM</p>
+            <p class="small-text">Last updated&nbsp;December 12, 2020 at 10:49 AM</p>
           
         </div>
       </div>
