--- a/es/equity/index.html
+++ b/es/equity/index.html
@@ -163,7 +163,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Compromiso de California con la equidad en la salud</h1>
           
-            <p class="small-text">Última actualización&nbsp;11 de diciembre de 2020 a las 1:55 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;12 de diciembre de 2020 a las 10:49 a. m.</p>
           
         </div>
       </div>
