--- a/zh-hans/latest-news/index.html
+++ b/zh-hans/latest-news/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>有关COVID-19的最新消息</h1>
           
-            <p class="small-text">最后更新时间&nbsp;December 12, 2020 at 1:55 PM</p>
+            <p class="small-text">最后更新时间&nbsp;December 13, 2020 at 10:49 AM</p>
           
         </div>
       </div>
