--- a/ar/equity/index.html
+++ b/ar/equity/index.html
@@ -163,7 +163,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>التزام ولاية كاليفورنيا بالعدالة الصحية.</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;6:03 م الساعة 12 ديسمبر 2020</p>
+            <p class="small-text">آخر التحديثات&nbsp;9:13 ص الساعة 13 ديسمبر 2020</p>
           
         </div>
       </div>
