--- a/data-and-tools/index.html
+++ b/data-and-tools/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Data and tools</h1>
           
-            <p class="small-text">Last updated&nbsp;December 13, 2020 at 6:03 PM</p>
+            <p class="small-text">Last updated&nbsp;December 14, 2020 at 9:13 AM</p>
           
         </div>
       </div>
