--- a/zh-hans/equity/index.html
+++ b/zh-hans/equity/index.html
@@ -163,7 +163,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>加州致力于实现健康公平</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2020年12月12日, 下午6:03</p>
+            <p class="small-text">最后更新时间&nbsp;2020年12月13日, 上午9:13</p>
           
         </div>
       </div>
