--- a/zh-hant/safer-economy/index.html
+++ b/zh-hant/safer-economy/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>更安全的經濟藍圖</h1>
           
-            <p class="small-text">最近更新&nbsp;2020年12月13日, 下午6:03</p>
+            <p class="small-text">最近更新&nbsp;2020年12月14日, 上午9:13</p>
           
         </div>
       </div>
