deploy: 2f87a513cbff412cfcc4dfe33fac43ab95510bc9

--- a/contact-tracing/index.html
+++ b/contact-tracing/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Contact tracing</h1>
           
-            <p class="small-text">Last updated&nbsp;December 14, 2020 at 11:16 AM</p>
+            <p class="small-text">Last updated&nbsp;December 14, 2020 at 11:23 AM</p>
           
         </div>
       </div>
@@ -276,7 +276,7 @@
 
 
 
-<p>You&#8217;ll get free, confidential testing and medical care, regardless of income, health insurance, or immigration status.</p>
+<p>You&#8217;ll get free, confidential testing and assistance in accessing medical care, regardless of income, health insurance, or immigration status.</p>
 
 
 
@@ -331,7 +331,7 @@
     <div class="col">
       <ul>
       <li>They will stay in touch to see if you develop symptoms.</li>
-      <li>You will get resources to quarantine or self-isolate.</li>
+      <li>You will get resources to self-quarantine or self-isolate.</li>
       <li>They may ask questions about the places you’ve been and the people you’ve spent time with.</li>
       </ul>
     </div>
@@ -376,11 +376,11 @@
 
 
 
-<ul><li>Isolate yourself from others, especially those who are at higher risk of getting very sick from COVID-19.</li><li>Try to stay in a separate room and use a separate bathroom.</li><li>Disinfect frequently-touched surfaces, or have your caregiver do so.</li></ul>
+<ul><li><a href="https://www.cdc.gov/coronavirus/2019-ncov/if-you-are-sick/isolation.html">Isolate</a> yourself from others, especially those who are at higher risk of getting very sick from COVID-19.</li><li>Try to stay in a separate room and use a separate bathroom.</li><li>Disinfect frequently touched surfaces, or have your caregiver do so.</li></ul>
 
 
 
-<p>People you live with are close contacts. They should also quarantine and get tested.</p>
+<p>People you live with are close contacts. They should also <a href="https://www.cdc.gov/coronavirus/2019-ncov/if-you-are-sick/quarantine.html">self-quarantine</a> and get tested.</p>
 
 
 
