--- a/contact-tracing/index.html
+++ b/contact-tracing/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Contact tracing</h1>
           
-            <p class="small-text">Last updated&nbsp;December 14, 2020 at 11:23 AM</p>
+            <p class="small-text">Last updated&nbsp;December 14, 2020 at 11:27 AM</p>
           
         </div>
       </div>
@@ -376,7 +376,7 @@
 
 
 
-<ul><li><a href="https://www.cdc.gov/coronavirus/2019-ncov/if-you-are-sick/isolation.html">Isolate</a> yourself from others, especially those who are at higher risk of getting very sick from COVID-19.</li><li>Try to stay in a separate room and use a separate bathroom.</li><li>Disinfect frequently touched surfaces, or have your caregiver do so.</li></ul>
+<ul><li><a href="https://www.cdc.gov/coronavirus/2019-ncov/if-you-are-sick/isolation.html">Isolate</a> yourself from others, especially those who are at higher risk of getting very sick from COVID-19.</li><li>Try to stay in a separate room and use a separate bathroom.</li><li>Disinfect frequently touched surfaces or have your caregiver do so.</li></ul>
 
 
 
@@ -392,7 +392,7 @@
 
 
 
-<ul><li>Testing</li><li>Medical care</li><li>Housing and other resources, if you need them, to self-isolate or quarantine</li></ul>
+<ul><li>Testing</li><li>Medical care</li><li>Housing and other resources, if you need them, to self-isolate or self-quarantine</li></ul>
 
 
 
