--- a/contact-tracing/index.html
+++ b/contact-tracing/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Contact tracing</h1>
           
-            <p class="small-text">Last updated&nbsp;December 14, 2020 at 11:27 AM</p>
+            <p class="small-text">Last updated&nbsp;December 14, 2020 at 11:40 AM</p>
           
         </div>
       </div>
@@ -400,7 +400,15 @@
 
 
 
-<p>A COVID-19 symptom check-in service is also available to you. This virtual assistant provides confidential and safe check-ins through text messages. Read more at the <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19-Contact-Tracing.aspx">CDPH Contact Tracing</a> web page.</p>
+<h4><strong>Virtual Assistant</strong></h4>
+
+
+
+<p>You may be contacted by text via the California Connected Virtual Assistant. The Virtual Assistant is an automated system used to support you as part of your local health department’s contact tracing efforts. The Virtual Assistant may ask you to complete a contact tracing survey and can also provide confidential and safe symptom check-ins through text messages. Read more at the <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19-Contact-Tracing.aspx">CDPH Contact Tracing</a> web page.</p>
+
+
+
+<h4><strong>Support for workers</strong></h4>
 
 
 
@@ -445,7 +453,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>You can participate by adding your phone to California’s exposure notification system. University of California, San Diego coordinates the California COVID Notify program.<strong> </strong>For details, see the <a href="https://canotify.uchealth.edu/ucsdh/">California COVID Notify</a> website or call <a href="Tel:888-421-9457">888-421-9457</a> (888-4C19-HLP). </p>
+<p>You can add your phone to the COVID fight by turning on CA Notify, California’s exposure notification system. This system does not track your personal information or location. For details, see the <a href="https://canotify.ca.gov/">CA Notify</a> website or call 888-421-9457 (888-4C19-HLP).</p>
 
       </div>
     </div>
