deploy: 4f03b38e17a4ebe766511c9422fe24c73a9e7c1e

--- a/contact-tracing/index.html
+++ b/contact-tracing/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Contact tracing</h1>
           
-            <p class="small-text">Last updated&nbsp;December 14, 2020 at 11:40 AM</p>
+            <p class="small-text">Last updated&nbsp;December 14, 2020 at 11:51 AM</p>
           
         </div>
       </div>
@@ -478,7 +478,7 @@
       <div class="card-body">
 <p>A <a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/appendix.html#contact">close contact</a> is someone who was within 6 feet of a person with COVID-19 for at least 15 minutes over a 24-hour period starting from 2 days before symptoms appeared (or, for patients who do not have symptoms, 2 days prior to their test) until the time the patient is isolated.</p>
 <p>You are also a close contact if:</p>
-<ul><li>You provided care at the home of someone who is sick with COVID-19</li><li>You had direct physical contact with the person (hugging or kissing them)</li><li>You shared eating or drinking utensils</li><li>They sneezed, coughed, or somehow got respiratory droplets on you.</li></ul>
+<ul><li>You provided care at the home of someone who is sick with COVID-19</li><li>You had direct physical contact with the person (such as hugging or kissing them)</li><li>You shared eating or drinking utensils</li><li>They sneezed, coughed, or somehow got respiratory droplets on you.</li></ul>
 
       </div>
     </div>
@@ -640,7 +640,7 @@
 <ul><li>at least 10 days have passed since symptoms started, <strong>AND</strong></li><li>your fever has been gone for 24 hours without the aid of medication, <strong>AND</strong>&nbsp;</li><li>your <a href="https://covid19.ca.gov/symptoms-and-risks/#top">symptoms</a> (like cough and shortness of breath) have improved.</li></ul>
 <p>This is true whether you&#8217;ve tested positive, negative, or are untested.</p>
 <p><strong>If you had <a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/appendix.html#contact">close contact</a> with someone who tested positive but you tested negative</strong>, you should still <a href="https://www.cdc.gov/coronavirus/2019-ncov/if-you-are-sick/quarantine.html">quarantine</a> at home for at least 14 days.</p>
-<p>Read more in the <a href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--en.pdf">Employer Playbook for a Safe Reopening (PDF)</a>.</p>
+<ul><li>Close contacts who have never had any symptoms may discontinue quarantine after Day 10 from the date of last exposure <strong>without</strong> testing.</li><li>If you are released from quarantine before Day 14 after exposure, you must:<ul><li>Monitor yourself daily for COVID-19 symptoms through Day 14 and if symptoms occur, immediately self-isolate and contact your local public health department or healthcare provider to get tested.</li><li>Wear a mask or facial covering around others, continue to wash your hands frequently, and stay at least 6 feet from others through Day 14.</li></ul></li></ul>
 
       </div>
     </div>
@@ -675,40 +675,6 @@
 
 
 
-
-
-
-<cwds-accordion>
-  <div class="card">
-    <button class="card-header accordion-alpha" type="button" aria-expanded="false">
-      <div class="accordion-title">
-<h4>How do I become a contact tracer?</h4>
-      </div>
-    </button>
-    <div class="card-container" aria-hidden="true" style="height: 0px;">
-      <div class="card-body">
-<p>California Connected is using existing state employees for contact tracing. We appreciate offers of additional support from the private sector and qualified members of the public, but they are not needed at this time.</p>
-
-      </div>
-    </div>
-  </div>
-</cwds-accordion>
-
-
-
-
-
-
-
-
-<div style="display:none;" class="js-qa js-qa-question">How do I apply for a contact tracer position?</div>
-<div style="display:none;" class="js-qa js-qa-answer">California Connected is using existing state employees for contact tracing. We appreciate offers of additional support from the private sector and qualified members of the public, but they are not needed at this time.</div>
-
-
-
-<div style="display:none;" class="js-qa js-qa-question">How do I sign-up for a contact tracer position?</div>
-<div style="display:none;" class="js-qa js-qa-answer">California Connected is using existing state employees for contact tracing. We appreciate offers of additional support from the private sector and qualified members of the public, but they are not needed at this time.
-</div>
 
 
 
