--- a/equity/index.html
+++ b/equity/index.html
@@ -163,7 +163,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>California’s commitment to health equity</h1>
           
-            <p class="small-text">Last updated&nbsp;December 13, 2020 at 11:55 AM</p>
+            <p class="small-text">Last updated&nbsp;December 13, 2020 at 12:29 PM</p>
           
         </div>
       </div>
