--- a/contact-tracing/index.html
+++ b/contact-tracing/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Contact tracing</h1>
           
-            <p class="small-text">Last updated&nbsp;December 14, 2020 at 11:51 AM</p>
+            <p class="small-text">Last updated&nbsp;December 14, 2020 at 12:29 PM</p>
           
         </div>
       </div>
@@ -241,7 +241,7 @@
 
 
 
-<p>By helping infected and exposed people self-isolate or self-quarantine, we can slow the spread of the infection and help avoid <a href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--en.pdf">outbreaks</a>. This helps California support those who are infected or exposed, while also keeping their loved ones and communities safe from the spread of infection. This also helps our hospitals and healthcare systems manage caring for the patients who develop serious illness. Contact tracing is a necessary activity that allows us to safely reopen schools and businesses.</p>
+<p>By helping infected and exposed people self-isolate or self-quarantine, we can slow the spread of the infection and help avoid <a href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--en.pdf">outbreaks</a>. This helps California support those who are infected or exposed, while also keeping their loved ones and&nbsp;communities safe from the spread of infection. This also helps our hospitals and healthcare systems manage caring for the patients who develop serious illness. Contact tracing is a necessary activity that allows us to safely reopen schools and businesses.</p>
 
 
 
@@ -639,7 +639,7 @@
 <p><strong>If you develop symptoms</strong>, you should stay home until:</p>
 <ul><li>at least 10 days have passed since symptoms started, <strong>AND</strong></li><li>your fever has been gone for 24 hours without the aid of medication, <strong>AND</strong>&nbsp;</li><li>your <a href="https://covid19.ca.gov/symptoms-and-risks/#top">symptoms</a> (like cough and shortness of breath) have improved.</li></ul>
 <p>This is true whether you&#8217;ve tested positive, negative, or are untested.</p>
-<p><strong>If you had <a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/appendix.html#contact">close contact</a> with someone who tested positive but you tested negative</strong>, you should still <a href="https://www.cdc.gov/coronavirus/2019-ncov/if-you-are-sick/quarantine.html">quarantine</a> at home for at least 14 days.</p>
+<p><strong>If you had <a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/appendix.html#contact">close contact</a> with someone who tested positive but you tested negative</strong>, you should still <a href="https://www.cdc.gov/coronavirus/2019-ncov/if-you-are-sick/quarantine.html">quarantine</a> at home for at least 10 days.</p>
 <ul><li>Close contacts who have never had any symptoms may discontinue quarantine after Day 10 from the date of last exposure <strong>without</strong> testing.</li><li>If you are released from quarantine before Day 14 after exposure, you must:<ul><li>Monitor yourself daily for COVID-19 symptoms through Day 14 and if symptoms occur, immediately self-isolate and contact your local public health department or healthcare provider to get tested.</li><li>Wear a mask or facial covering around others, continue to wash your hands frequently, and stay at least 6 feet from others through Day 14.</li></ul></li></ul>
 
       </div>
