--- a/contact-tracing/index.html
+++ b/contact-tracing/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Contact tracing</h1>
           
-            <p class="small-text">Last updated&nbsp;December 14, 2020 at 12:29 PM</p>
+            <p class="small-text">Last updated&nbsp;December 14, 2020 at 1:44 PM</p>
           
         </div>
       </div>
@@ -241,7 +241,7 @@
 
 
 
-<p>By helping infected and exposed people self-isolate or self-quarantine, we can slow the spread of the infection and help avoid <a href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--en.pdf">outbreaks</a>. This helps California support those who are infected or exposed, while also keeping their loved ones and&nbsp;communities safe from the spread of infection. This also helps our hospitals and healthcare systems manage caring for the patients who develop serious illness. Contact tracing is a necessary activity that allows us to safely reopen schools and businesses.</p>
+<p>By helping infected and exposed people self-isolate or self-quarantine, we can slow the spread of the infection and help avoid <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/ab685.aspx">outbreaks</a>. This helps California support those who are infected or exposed, while also keeping their loved ones and communities safe from the spread of infection. This also helps our hospitals and healthcare systems manage caring for the patients who develop serious illness. Contact tracing is a necessary activity that allows us to safely reopen schools and businesses.</p>
 
 
 
