deploy: 508160a6384199cc201ad7378b7a695beb3be0d1

--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -162,7 +162,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;December 14, 2020 at 12:54 PM</p>
+            <p class="small-text">Last updated&nbsp;December 14, 2020 at 2:30 PM</p>
           
         </div>
       </div>
@@ -183,7 +183,7 @@
 
 
 
-<ul><li><strong><a href="#A-COVID-19-vaccine-is-here">A COVID-19 vaccine is here</a></strong></li><li><strong><a href="#When-can-I-get-vaccinated"><strong>When can I get vaccinated?</strong></a></strong></li><li><strong><a href="#How-COVID-19-vaccines-work">How COVID-19 vaccines work</a></strong></li><li><strong><a href="#Benefits-of-getting-vaccinated">Benefits of getting vaccinated</a></strong></li><li><strong><a href="#Busting-myths-about-vaccination">Busting myths about vaccination</a></strong></li><li><a href="https://toolkit.covid19.ca.gov/"><strong>Partner resources</strong></a></li><li><strong><a href="#Questions-and-answers">Questions and answers</a></strong></li></ul>
+<ul><li><strong><a href="#A-COVID-19-vaccine-is-here">A COVID-19 vaccine is here</a></strong></li><li><strong><a href="#When-can-I-get-vaccinated"><strong>When can I get vaccinated?</strong></a></strong></li><li><strong><a href="#How-COVID-19-vaccines-work">How COVID-19 vaccines work</a></strong></li><li><strong><a href="#Benefits-of-getting-vaccinated">Benefits of getting vaccinated</a></strong></li><li><strong><a href="#Busting-myths-about-vaccination">Busting myths about vaccination</a></strong></li><li><a href="https://toolkit.covid19.ca.gov/partners/"><strong>Partner resources</strong></a></li><li><strong><a href="#Questions-and-answers">Questions and answers</a></strong></li></ul>
 
 
 
