Update page - vaccines.html ccda38183138293e31039746afee3c805f5c33a3

--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;February 17, 2021 at 5:37 PM</p>
+            <p class="small-text">Last updated&nbsp;February 17, 2021 at 5:41 PM</p>
           
         </div>
       </div>
@@ -168,7 +168,7 @@
     <div class="col-md-9 order-last order-md-1">
       <h3 class="color-primary mt-0">Sign up for COVID-19 vaccination
       </h3>
-      <p class="pr-0 pr-md-5">Vaccinations are in high demand. But you can find out when it’s your turn to get one. Sign up at myturn.ca.gov and schedule your appointment, or get notified when appointments are available in your area.</p>
+      <p class="pr-0 pr-md-5">Vaccinations are in high demand. But you can find out when it’s your turn to get one. Sign up at  <a href="https://myturn.ca.gov/" class="alert-link"> myturn.ca.gov</a> and schedule your appointment, or get notified when appointments are available in your area.</p>
       <a class="button-lightblue font-size-1em" href="https://myturn.ca.gov/landing">Sign up now</a>
     </div>
 
