Update translation - 102800777 (#3349) d3b6078bcd5311d0c1c195f29d3b2820bc22988f

--- a/ko/education/index.html
+++ b/ko/education/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>교육</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 2월 12일 오전 9:45</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 2월 16일 오후 5:29</p>
           
         </div>
       </div>
@@ -195,15 +195,19 @@
 
 
 
-<p>또한 캘리포니아는 저소득층 아동과 장애 아동에 대한 집중적인 지원을 포함하여 수업 폐쇄 조치로 영향을 받는 모든 학생들에게 필요한 부분을 교육 지도자들이 충족시킬 수 있도록 지원하기 위한 <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf" data-type="URL" data-id="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">유치원 및 초중고교 지원 관련 지침</a>을 발표하였습니다.</p>
-
-
-
-<p>캘리포니아 교육부(California Department of Education)는 다음과 같은 학생 지원 내용을 담은 지침을 발표했습니다:</p>
+<p>캘리포니아 교육부(Department of Education)는 학생 지원을 위해  다음과 같은 지침을 마련했습니다:</p>
 
 
 
 <ul><li><a href="https://www.cde.ca.gov/ls/he/hn/distancelearning.asp">원격학습 및 자발적 학습</a></li><li><a href="https://www.cde.ca.gov/ls/he/hn/schoolmeals.asp">학교 급식 배급</a></li><li><a href="https://www.cde.ca.gov/ls/he/hn/specialedcovid19guidance.asp">장애가 있는 학생들을 위한 편의제공</a></li><li><a href="https://www.cde.ca.gov/sp/cd/ci/mb2005.asp">조기 교육 및 보육 비용 면제</a></li><li><a href="https://www.cde.ca.gov/ls/he/hn/cdecovidfaq2019.asp">자주 하는 질문 업데이트</a></li></ul>
+
+
+
+<p>캘리포니아는 <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">유치원과 초중고교 교육 지도자들이</a> 휴교로 인해 피해를 입은 모든 학생들에게 필요한 부분을 충족시킬 수 있도록 지침을 발표하였으며 저소득층 자녀와 장애 아동에 대한 지원을 강조하였습니다. </p>
+
+
+
+<p>또한 질병 통제 센터(Centers for Disease Control and Prevention, CDC)는 안전한 대면 수업을 재개하기 위한 권고안을 발표하였습니다. <a href="https://files.covid19.ca.gov/pdf/CDC-California-schools-guidance-crosswalk--en.pdf">CDC-캘리포니아 K-12 학교 지침 비교표</a>에서 CDC 지침과 캘리포니아 교육부 지침의 비교 내용을 참조하십시오. </p>
 
 
 
