--- a/vi/education/index.html
+++ b/vi/education/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Giáo dục</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;12 tháng 2, 2021 lúc 9:45</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;16 tháng 2, 2021 lúc 17:29</p>
           
         </div>
       </div>
@@ -197,15 +197,19 @@
 
 
 
-<p>California cũng đã đưa ra <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf" data-type="URL" data-id="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">hướng dẫn giáo dục dành cho khối Mầm Non - Lớp 12 (Kindergarten to 12th Grade, K-12)</a> nhằm hỗ trợ ban lãnh đạo đáp ứng nhu cầu của mọi học sinh chịu ảnh hưởng từ quyết định đóng cửa trường học, chú trọng vào việc hỗ trợ con em của các gia đình có thu nhập thấp và trẻ khuyết tật.</p>
-
-
-
 <p>Sở Giáo Dục California đưa ra hướng dẫn về việc hỗ trợ đối tượng học sinh, bao gồm:</p>
 
 
 
-<ul><li><a href="https://www.cde.ca.gov/ls/he/hn/distancelearning.asp">Học từ xa</a></li><li><a href="https://www.cde.ca.gov/ls/he/hn/schoolmeals.asp">Bữa ăn của trường</a></li><li><a href="https://www.cde.ca.gov/ls/he/hn/specialedcovid19guidance.asp">Dịch vụ cho học sinh khuyết tật</a></li><li><a href="https://www.cde.ca.gov/sp/cd/ci/mb2005.asp">Miễn lệ phí gia đình cho việc học tập và chăm sóc sớm</a></li><li><a href="https://www.cde.ca.gov/ls/he/hn/cdecovidfaq2019.asp">Các Câu Hỏi Thường Gặp Được Cập Nhật</a></li></ul>
+<ul><li><a href="https://www.cde.ca.gov/ls/he/hn/distancelearning.asp">Học từ xa</a></li><li><a href="https://www.cde.ca.gov/ls/he/hn/schoolmeals.asp">Bữa ăn của trường</a></li><li><a href="https://www.cde.ca.gov/ls/he/hn/specialedcovid19guidance.asp">Dịch vụ cho học sinh khuyết tật</a></li><li><a href="https://www.cde.ca.gov/sp/cd/ci/mb2005.asp">Miễn lệ phí gia đình cho việc học tập và chăm sóc sớm</a></li><li><a href="https://www.cde.ca.gov/ls/he/hn/cdecovidfaq2019.asp">Các Câu Hỏi Thường Gặp (Frequently Asked Question, FAQ) Được Cập Nhật</a></li></ul>
+
+
+
+<p>California đã đưa ra <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">hướng dẫn giáo dục K-12 </a>hỗ trợ lãnh đạo đáp ứng nhu cầu của mọi học sinh chịu ảnh hưởng bởi việc đóng cửa của trường học, chú trọng vào hoạt động hỗ trợ trẻ em có thu nhập thấp và trẻ khuyết tật. </p>
+
+
+
+<p>CDC cũng đã đưa ra các đề xuất để tiếp tục hướng dẫn trực tiếp, an toàn. Hãy xem hướng dẫn của Trung Tâm Kiểm Soát và Phòng Ngừa Dịch Bệnh (Centers for Disease Control and Prevention, CDC) so với Hướng Dẫn của Sở Y Tế Công Cộng California trong <a href="https://files.covid19.ca.gov/pdf/CDC-California-schools-guidance-crosswalk--en.pdf">Sổ Tay Hướng Dẫn Dành Cho Các Trường Học Thuộc Khối Mầm Non-Lớp 12 tại California của CDC</a>.</p>
 
 
 
