--- a/zh-hans/education/index.html
+++ b/zh-hans/education/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>教育</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年2月12日, 上午9:45</p>
+            <p class="small-text">最后更新时间&nbsp;2021年2月16日, 下午5:29</p>
           
         </div>
       </div>
@@ -195,15 +195,19 @@
 
 
 
-<p>加州亦发布了<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf" data-type="URL" data-id="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">相关指引，以帮助K-12</a>教育领导者能满足所有因停课而受影响学生的需求，重点是帮助低收入儿童和残疾儿童。</p>
-
-
-
 <p>加州教育局发布了有关学生支援的指引，包括：</p>
 
 
 
 <ul><li><a href="https://www.cde.ca.gov/ls/he/hn/distancelearning.asp">远程教学</a></li><li><a href="https://www.cde.ca.gov/ls/he/hn/schoolmeals.asp">学校餐食</a></li><li><a href="https://www.cde.ca.gov/ls/he/hn/specialedcovid19guidance.asp">为残疾学生提供服务</a></li><li><a href="https://www.cde.ca.gov/sp/cd/ci/mb2005.asp">免除早期学习和照顾的家庭费用</a></li><li><a href="https://www.cde.ca.gov/ls/he/hn/cdecovidfaq2019.asp">更新的常见问题解答</a></li></ul>
+
+
+
+<p>加州发布了<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">相关指引，以帮助K-12</a>教育领导者能满足所有因停课而受影响学生的需求，重点是帮助低收入儿童和残疾儿童。 </p>
+
+
+
+<p>CDC亦发布了有关重新开展安全的面授教学的建议。请参阅<a href="https://files.covid19.ca.gov/pdf/CDC-California-schools-guidance-crosswalk--en.pdf">CDC-加州K-12学校指引对照表</a>，了解CDC指引与加州公共卫生局指引的对比情况。</p>
 
 
 
