--- a/zh-hant/education/index.html
+++ b/zh-hant/education/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>教育</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年2月12日, 上午9:45</p>
+            <p class="small-text">最近更新&nbsp;2021年2月16日, 下午5:29</p>
           
         </div>
       </div>
@@ -195,15 +195,19 @@
 
 
 
-<p>加州亦發佈了<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf" data-type="URL" data-id="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">相關指引，以幫助K-12</a>教育領導者能滿足所有因停課而受影響學生的需求，重點是幫助低收入兒童和殘疾兒童。</p>
-
-
-
 <p>加州教育局提供有關學生支援的指引，包括：</p>
 
 
 
 <ul><li><a href="https://www.cde.ca.gov/ls/he/hn/distancelearning.asp">遠距教學</a></li><li><a href="https://www.cde.ca.gov/ls/he/hn/schoolmeals.asp">學校餐食</a></li><li><a href="https://www.cde.ca.gov/ls/he/hn/specialedcovid19guidance.asp">為殘疾學生提供服務</a></li><li><a href="https://www.cde.ca.gov/sp/cd/ci/mb2005.asp">免收早期學習和照顧的家庭費用</a></li><li><a href="https://www.cde.ca.gov/ls/he/hn/cdecovidfaq2019.asp">更新的常見問題解答</a></li></ul>
+
+
+
+<p>加州發佈了<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">相關指引，以幫助K-12</a>教育領導者能滿足所有因停課而受影響學生的需求，重點是幫助低收入兒童和殘疾兒童。 </p>
+
+
+
+<p>CDC亦發佈了有關重新開展安全的面授教學的建議。請參閱<a href="https://files.covid19.ca.gov/pdf/CDC-California-schools-guidance-crosswalk--en.pdf">CDC-加州K-12學校指引對照表</a>，了解CDC指引與加州公共衛生局指引的對比情況。</p>
 
 
 
