--- a/ar/education/index.html
+++ b/ar/education/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>التعليم</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;9:45 ص الساعة 12 فبراير 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;5:29 م الساعة 16 فبراير 2021</p>
           
         </div>
       </div>
@@ -195,15 +195,19 @@
 
 
 
-<p>أصدرت أيضًا ولاية كاليفورنيا <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf" data-type="URL" data-id="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">إرشادات لمساعدة قادة التعليم -من رياض الأطفال إلى الصف الثاني عشر-</a>في تلبية احتياجات جميع الطلاب المتضررين من إغلاق المدارس، مع التركيز على مساعدة الأطفال ذوي الدخل المنخفض وذوي الإعاقة.</p>
-
-
-
 <p>توفر إدارة التعليم بولاية كاليفورنيا إرشادات حول دعم الطلاب، بما في ذلك:</p>
 
 
 
 <ul><li><a href="https://www.cde.ca.gov/ls/he/hn/distancelearning.asp">التعلم عن بُعد</a></li><li><a href="https://www.cde.ca.gov/ls/he/hn/schoolmeals.asp">الوجبات المدرسية</a></li><li><a href="https://www.cde.ca.gov/ls/he/hn/specialedcovid19guidance.asp">الخدمات للطلاب ذوي الإعاقة</a></li><li><a href="https://www.cde.ca.gov/sp/cd/ci/mb2005.asp">إعفاء الأسرة من رسوم التعليم المبكر والرعاية</a></li><li><a href="https://www.cde.ca.gov/ls/he/hn/cdecovidfaq2019.asp">الأسئلة الشائعة المحدثة</a></li></ul>
+
+
+
+<p>أصدرت ولاية كاليفورنيا <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">إرشادات لمساعدة قادة التعليم من رياض الأطفال إلى الصف الثاني عشر</a> في تلبية احتياجات جميع الطلاب المتضررين من إغلاق المدارس، مع التركيز على مساعدة الأطفال ذوي الدخل المنخفض وذوي الإعاقة. </p>
+
+
+
+<p>أصدر مركز مكافحة الأمراض والوقاية منها أيضًا توصيات لاستئناف التعليم الآمن بالحضور الشخصية للطلاب. انظر كيف تُقارن إرشادات مركز مكافحة الأمراض والوقاية منها (CDC) بإرشادات إدارة الصحة العامة بولاية كاليفورنيا في <a href="https://files.covid19.ca.gov/pdf/CDC-California-schools-guidance-crosswalk--en.pdf">الإرشادات المدرسية للصفوف (K-12) الصادرة عن مركز مكافحة الأمراض والوقاية منها-كاليفورنيا</a>.</p>
 
 
 
