--- a/es/education/index.html
+++ b/es/education/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Educación</h1>
           
-            <p class="small-text">Última actualización&nbsp;12 de febrero de 2021 a las 9:45 a. m.</p>
+            <p class="small-text">Última actualización&nbsp;16 de febrero de 2021 a las 5:29 p. m.</p>
           
         </div>
       </div>
@@ -195,15 +195,19 @@
 
 
 
-<p>California publicó también una <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf" data-type="URL" data-id="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">orientación para ayudar a los líderes de la educación del preescolar al 12.º grado (K-12)</a> a satisfacer las necesidades de todos los alumnos afectados por los cierres de escuelas, con un énfasis en la asistencia para los niños de familias de bajos ingresos y con discapacidades.</p>
-
-
-
 <p>El Departamento de Educación de California tiene una orientación sobre cómo ayudar a los alumnos, que incluye:</p>
 
 
 
 <ul><li><a href="https://www.cde.ca.gov/ls/he/hn/distancelearning.asp">Aprendizaje a distancia</a></li><li><a href="https://www.cde.ca.gov/ls/he/hn/schoolmeals.asp">Comidas escolares</a></li><li><a href="https://www.cde.ca.gov/ls/he/hn/specialedcovid19guidance.asp">Servicios para los alumnos con discapacidades</a></li><li><a href="https://www.cde.ca.gov/sp/cd/ci/mb2005.asp">Tarifas familiares exentas para el aprendizaje y el cuidado tempranos</a></li><li><a href="https://www.cde.ca.gov/ls/he/hn/cdecovidfaq2019.asp">Preguntas frecuentes actualizadas</a></li></ul>
+
+
+
+<p>California publicó una <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">orientación para ayudar a los líderes de la educación del preescolar al 12.º grado (K-12)</a> a satisfacer las necesidades de todos los alumnos afectados por los cierres de escuelas, con un énfasis en la asistencia para los niños de familias de bajos ingresos y con discapacidades. </p>
+
+
+
+<p>Los Centros para el Control y la Prevención de Enfermedades (Centers for Disease Control and Prevention, CDC) también han emitido recomendaciones para reanudar la instrucción segura en persona. Consulte cómo se compara la guía de los CDC con la del Departamento de Salud Pública de California en <a href="https://files.covid19.ca.gov/pdf/CDC-California-schools-guidance-crosswalk--en.pdf">CDC: Paso seguro entre la guía de los CDC y la guía para escuelas K-12 de California</a>.</p>
 
 
 
