--- a/tl/education/index.html
+++ b/tl/education/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Edukasyon</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Pebrero 12, 2021 sa 9:45 AM</p>
+            <p class="small-text">Huling na-update&nbsp;Pebrero 16, 2021 sa 5:29 PM</p>
           
         </div>
       </div>
@@ -195,15 +195,19 @@
 
 
 
-<p>Naglabas din ang California <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf" data-type="URL" data-id="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">ng gabay para tulungan ang </a>mga pinuno ng edukasyon para sa K-12 na matugunan ang mga pangangailangan ng lahat ng mag-aaral na apektado ng mga pagsasara ng paaralan, na binibigyang-diin ang pagtulong sa mga anak na mababa ang kita at ang mga may kapansanan.</p>
-
-
-
 <p>Ang Departamento ng Edukasyon ng California (California Department of Education) ay may gabay tungkol sa suporta para sa mga mag-aaral, kasama ang:</p>
 
 
 
 <ul><li><a href="https://www.cde.ca.gov/ls/he/hn/distancelearning.asp">Malayuang pag-aaral</a></li><li><a href="https://www.cde.ca.gov/ls/he/hn/schoolmeals.asp">Mga pagkain mula sa paaralan</a></li><li><a href="https://www.cde.ca.gov/ls/he/hn/specialedcovid19guidance.asp">Mga serbisyo para sa mga mag-aaral na may mga kapansanan</a></li><li><a href="https://www.cde.ca.gov/sp/cd/ci/mb2005.asp">Inalis ang mga fee sa pamilya para sa pag-aaral at pangangalaga ng mga batang wala pa sa edad na pumasok sa eskuwela</a></li><li><a href="https://www.cde.ca.gov/ls/he/hn/cdecovidfaq2019.asp">Na-update na Mga Madalas Itanong</a></li></ul>
+
+
+
+<p>Naglabas ang California ng <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">gabay para tulungan ang mga pinuno ng edukasyon para sa K-12</a> na matugunan ang mga pangangailangan ng lahat ng mag-aaral na apektado ng mga pagsasara ng paaralan, na binibigyang-diin ang pagtulong sa mga anak na mababa ang kita at ang mga may kapansanan. </p>
+
+
+
+<p>Naglabas din ang CDC ng mga rekomendasyon para maipagpatuloy ang ligtas at in-person na pagtuturo. Tingnan kung paano maikukumpara ang gabay ng CDC sa gabay ng California Department of Public Health sa <a href="https://files.covid19.ca.gov/pdf/CDC-California-schools-guidance-crosswalk--en.pdf">CDC-Crosswalk na Gabay sa Mga K-12 na Paaralan ng California</a>.</p>
 
 
 
